# LibApex

./: .clang-tidy  .exrc  CMakeLists.txt  LibApex.cpp  LibApex.h  LibApex.mm  README.md  compile_commands.json  libapex.code-workspace  linux-clang.cmake  test.sh  windows-clang.cmake  windows-msvc.cmake
src/: ApexMeter.cpp  StandardIncludes.h
src/base/: StandardIncludes.h
src/dsp/: Gain.cpp  Gain.h  WaveShaper.cpp  WaveShaper.h
src/dsp/dynamics/: DynamicsState.h
src/dsp/dynamics/gaincomputers/: GainComputer.cpp  GainComputer.h  GainComputerCompressor.cpp  GainComputerCompressor.h  GainComputerExpander.cpp  GainComputerExpander.h
src/dsp/dynamics/gainreductions/: GainReduction.cpp  GainReduction.h  GainReductionFET.cpp  GainReductionFET.h  GainReductionOpto.cpp  GainReductionOpto.h  GainReductionVCA.cpp  GainReductionVCA.h
src/dsp/dynamics/leveldetectors/: LevelDetector.cpp  LevelDetector.h  LevelDetector1176.cpp  LevelDetector1176.h  LevelDetectorModernBus.cpp  LevelDetectorModernBus.h  LevelDetectorRMS.cpp  LevelDetectorRMS.h  LevelDetectorSSL.cpp  LevelDetectorSSL.h
src/dsp/dynamics/sidechains/: Sidechain.cpp  Sidechain.h  Sidechain1176.cpp  Sidechain1176.h  SidechainModernBus.cpp  SidechainModernBus.h  SidechainSSL.h
src/dsp/envelopes/: AttackEnvelope.cpp  Envelope.h  ReleaseEnvelope.cpp  ReleaseEnvelope.h
src/dsp/filters/: BiQuadFilter.cpp  BiQuadFilter.h  Dither.cpp  Dither.h
src/dsp/gainreductions/: GainReduction.cpp  GainReduction.h  GainReductionFET.cpp  GainReductionFET.h  GainReductionOpto.cpp  GainReductionOpto.h  GainReductionVCA.cpp  GainReductionVCA.h
src/dsp/gainstages/: GainStage.h  GainStageFET.cpp  GainStageFET.h  GainStageVCA.cpp  GainStageVCA.h
src/dsp/leveldetectors/: LevelDetector.cpp  LevelDetector.h  LevelDetector1176.h  LevelDetectorModernBus.cpp  LevelDetectorModernBus.h  LevelDetectorRMS.cpp  LevelDetectorRMS.h  LevelDetectorSSL.h
src/dsp/meters/: Meter.h  PeakMeter.h  RMSMeter.h
src/dsp/processors/: BaseCompressor.h  Compressor1176.h  EQBand.cpp  EQBand.h  Gain.cpp  Gain.h  MultiChannelProcessor.h  OverSampler.h  ParallelEQBand.cpp  ParallelEQBand.h  Processor.h
src/dsp/test/: WaveShaperTest.h
src/math/: Constants.h  Decibels.cpp  Decibels.h  Exponentials.cpp  Exponentials.h  Frequency.h  General.cpp  General.h  Random.cpp  Random.h  TrigFuncs.cpp  TrigFuncs.h
src/math/test/: DecibelsTest.h  ExponentialsTestDouble.h  ExponentialsTestFloat.h  FrequencyTest.h  GeneralTestDouble.h  GeneralTestFloat.h  TrigFuncsTestDouble.h  TrigFuncsTestFloat.h
src/test/: ApexTest.cpp  TestConstants.h
src/ui/: ApexComboBox.cpp  ApexComboBox.h  ApexFader.cpp  ApexFader.h  ApexFilmStrip.cpp  ApexFilmStrip.h  ApexLookAndFeel.cpp  ApexLookAndFeel.h  ApexMeter.cpp  ApexMeter.h  ApexSlider.cpp  ApexSlider.h  ApexThumbSlider.cpp  ApexThumbSlider.h  ApexToggleButton.cpp  ApexToggleButton.h
src/utils/: ChangeDetector.h  Concepts.h  Details.h  Error.cpp  Error.h  Interpolator.h  LockFreeQueue.h  Logger.cpp  Logger.h  MiscMacros.h  Option.cpp  Option.h  OptionAndResult.h  Result.cpp  Result.h  RingBuffer.h  Span.h  TypeTraits.h
src/utils/synchronization/: ReadWriteLock.h  ScopedLockGuard.h
src/utils/test/: ChangeDetectorTest.h  InterpolatorTest.h  OptionTest.h  ResultTest.h  RingBufferTest.h
